Add Panna Cotta

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Expensive Italian Desserts</h1>
 
-    <!-- <h2><a href="recipes/panna-cotta.html">Panna Cotta</a></h2> -->
+    <h2><a href="recipes/panna-cotta.html">Panna Cotta</a></h2>
     <h2><a href="recipes/torta-caprese.html">Torta Caprese</a></h2>
     <h2><a href="recipes/budino-al-cioccolato.html">Budino al Cioccolato</a></h2>
 </body>
