--- a/recipes/torta-caprese.html
+++ b/recipes/torta-caprese.html
@@ -19,7 +19,7 @@
         <li>3 cup (280g) super-fine almond flour</li>
         <li>1 tablespoon powdered sugar (to dust cake)</li>
     </ul>
-
+    <h2>Instructions</h2>
     <ol>
         <li>Grease a 10” springform pan with butter and dust with cocoa powder. Set aside until needed.</li>
         <li>Preheat the oven to 350° F and place an oven rack in the center of the oven.</li>
